Ajout du stage chez lohce

--- a/index.en.html
+++ b/index.en.html
@@ -326,6 +326,31 @@
                             <div class="line"></div>
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
+                                    <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.webp" alt="LOHCE"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>FrontEnd Developer Intern</h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>April 2022 • June 2022</b>
+                                        <p>LOHCE • Remote</p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        The main goal of this internship was to create a prototype chat bot to help people buy a travel ticket online.
+                                    </h4>
+                                    <div>
+                                        <button>REACT JS</button> 
+                                        <button>API</button>
+                                        <button>GIT</button>
+                                        <button>AGILE</button>
+                                        <button>TEAM WORK</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp"
                                             alt="LaMater"></a>
                                 </div>
