--- a/index.html
+++ b/index.html
@@ -314,6 +314,31 @@
                             <div class="line"></div>
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
+                                    <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.webp" alt="LOHCE"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>Stagiaire FrontEnd Developer</h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>Avril 2022 • Juin 2022</b>
+                                        <p>LOHCE • Remote</p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Le but principal de ce stage était la création d'un prototype de chat bot pour aider des personnes à acheter un billet de voyage en ligne.
+                                    </h4>
+                                    <div>
+                                        <button>REACT JS</button> 
+                                        <button>API</button>
+                                        <button>GIT</button>
+                                        <button>AGILE</button>
+                                        <button>TRVAIL EN EQUIPE</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
