ajout de deux projets perso

--- a/index.html
+++ b/index.html
@@ -475,17 +475,23 @@
                     <a href="https://awwwards-nav-bar.vercel.app/" target="_blank">
                         <img src="projets/awwwards-navbar.webp" alt="awwwards-navbar">
                     </a>
-                    <a href="https://hello-city-ln.herokuapp.com/" target="_blank">
-                        <img src="projets/hello-city.webp" alt="hello-city">
+                    <a href="https://cow-boy-inte.vercel.app/" target="_blank">
+                        <img src="projets/cowboy.webp" alt="cowboy">
                     </a>
                     <a href="https://login-page1.vercel.app/" target="_blank">
                         <img src="projets/loginpage-1.webp" alt="loginpage-1">
+                    </a>
+                    <a href="https://eureka-inte.vercel.app/" target="_blank">
+                        <img src="projets/eureka.webp" alt="eureka">
                     </a>
                     <a href="https://streamix-inte.vercel.app/" target="_blank">
                         <img src="projets/streamix.webp" alt="streamix-inte">
                     </a>
                     <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
                         <img src="projets/clone-ui-ig.webp" alt="clone-ui-ig">
+                    </a>
+                    <a href="https://hello-city-ln.herokuapp.com/" target="_blank">
+                        <img src="projets/hello-city.webp" alt="hello-city">
                     </a>
                     <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
                         <img src="projets/ln-react-blog.webp" alt="ln-react-blog">
