Ajout de BuyMeACofee et ausssi de quelques skills

--- a/index.en.html
+++ b/index.en.html
@@ -28,7 +28,7 @@
     <!-- Title -->
     <title>NGOYA Leonel • FrontEnd Developer</title>
     <!-- Page Icon -->
-    <link rel="icon" sizes="76x76" href="img/logo.ico">
+    <link rel="icon" sizes="76x76" href="img/LN.ico">
     <!-- Ionicon -->
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <!-- CSS Local -->
@@ -189,10 +189,11 @@
                             <ion-icon name="logo-css3"></ion-icon>
                             <ion-icon name="logo-sass"></ion-icon>
                             <ion-icon name="logo-javascript"></ion-icon>
-                            <span><img src="img/ts.webp" alt="ts"></span>
+                            <span><img src="img/react.webp" alt="react"></span>
                             <span><img src="img/svelte.webp" alt="svelte"></span>
                             <span><img src="img/vue.webp" alt="svelte"></span>
-                            <span><img src="img/react.webp" alt="react"></span>
+                            <span><img src="img/ts.webp" alt="ts"></span>
+                            <span><img src="img/nextjs.png" alt="nextjs"></span>
                         </div>
                     </div>
                     <div class="skillest-cards-container-card">
@@ -676,6 +677,9 @@
                         <ion-icon name="logo-instagram"></ion-icon>
                     </a>
                 </div>
+                <a class="footer-container-buy" href="https://www.buymeacoffee.com/lndev" target="_blank">
+                    <img src="./img/BuyMeACoffee.webp" alt="buymeacoffee" />
+                </a>
                 <p class="copyright">
                 </p>
             </div>
