ajout de canon-yde-new

--- a/index.html
+++ b/index.html
@@ -464,6 +464,9 @@
                     <h2>Ici je vous présente mes projets personnels que j'ai réalisé juste pour le fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
+                    <a href="https://canon-yde-new.vercel.app/" target="_blank">
+                        <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
+                    </a>
                     <a href="https://camer-djoss.vercel.app/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
