--- a/index.en.html
+++ b/index.en.html
@@ -488,6 +488,9 @@
                     <h2>Here I present to you my personal projects that I made just for fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
+                    <a href="https://canon-yde-new.vercel.app/" target="_blank">
+                        <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
+                    </a>
                     <a href="https://camer-djoss.vercel.app/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
