Ajout du code de google analytics

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="💻 NGOYA LEONEL️ 🌴️">
     <meta property="og:description" content="Je développe des sites et applications web responsive dans lesquels j'utilise mon inspiration pour avoir une interface belle et compréhensible par l'utilisateur tout en respectant les demandes des clients et dans certains cas en communiquant avec des API.">
     <meta name="author" content="NGOYA Leonel">
-    <meta property="og:url" content="https://lndev.com/">
+    <meta property="og:url" content="https://lndev.me/">
     <meta property="og:site_name" content="💻 NGOYA LEONEL️ 🌴">
     <meta property="og:type" content="website">
     <!-- Title -->
@@ -40,6 +40,26 @@
     <script src="scripts/nav.js" defer></script>
     <script src="scripts/experience.js" defer></script>
     <script src="scripts/footer.js" defer></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-E7N5LJTEWP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-E7N5LJTEWP');
+</script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-235349501-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-235349501-1');
+</script>
 </head>
 
 <body class="dark-mode">
