ajout de cmr-logos-inte

--- a/index.en.html
+++ b/index.en.html
@@ -520,6 +520,9 @@
                     <a href="https://buy-nft.vercel.app/" target="_blank">
                         <img src="projets/buynft.webp" alt="buynft">
                     </a>
+                    <a href="https://cmr-logo-inte.vercel.app/" target="_blank">
+                        <img src="projets/cmr-logos-inte.webp" alt="cmr-logos-inte">
+                        </a>
                     <a href="https://awwwards-nav-bar.vercel.app/" target="_blank">
                         <img src="projets/awwwards-navbar.webp" alt="awwwards-navbar">
                     </a>
