--- a/index.fr.html
+++ b/index.fr.html
@@ -313,7 +313,7 @@
                                     <a href="https://mboadigital.tech/" target="_blank"><img src="img/mboa.webp" alt="Mboa Digital"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>Stagiaire FrontEnd Developer</h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Juin 2022 • Aout 2022</b>
                                         <p>Mboa Digital • Yaounde</p>
@@ -338,7 +338,7 @@
                                     <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.webp" alt="LOHCE"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>Stagiaire FrontEnd Developer</h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Avril 2022 • Juin 2022</b>
                                         <p>LOHCE • Remote</p>
@@ -363,7 +363,7 @@
                                     <a href="https://market.lamater.net/" target="_blank"><img src="img/lamater.webp" alt="LaMater"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>Stagiaire FrontEnd Developer</h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Mars 2022 • Mai 2022</b>
                                         <p>LA MATER • Remote</p>
