--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                                             alt="Mboa Digital"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>FrontEnd Developer Intern</h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>June 2022 • August 2022</b>
                                     <p>Mboa Digital • Yaounde</p>
@@ -350,7 +350,7 @@
                                     <a href="https://www.lohce.com/" target="_blank"><img src="img/lohce.webp" alt="LOHCE"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>FrontEnd Developer Intern</h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>April 2022 • June 2022</b>
                                         <p>LOHCE • Remote</p>
@@ -376,7 +376,7 @@
                                             alt="LaMater"></a>
                                 </div>
                                 <div class="experience-cards-container-card-container">
-                                    <h3>FrontEnd Developer Intern</h3>
+                                    <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>March 2022 • May 2022</b>
                                     <p>LA MATER • Remote</p>
