--- a/index.fr.html
+++ b/index.fr.html
@@ -546,6 +546,9 @@
                     <a href="https://login-page1.vercel.app/" target="_blank">
                         <img src="projets/loginpage-1.webp" alt="loginpage-1">
                     </a>
+                    <a href="https://ln-calco.vercel.app/" target="_blank">
+                        <img src="projets/ln-calco.webp" alt="ln-calco">
+                    </a>
                     <a href="https://eureka-inte.vercel.app/" target="_blank">
                         <img src="projets/eureka.webp" alt="eureka">
                     </a>
