--- a/index.html
+++ b/index.html
@@ -522,6 +522,9 @@
                     <a href="https://camer-djoss.vercel.app/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
+                    <a href="https://learnskillz.vercel.app/" target="_blank">
+                        <img src="projets/learn-skillz.webp" alt="learnskillz">
+                    </a>
                     <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
                         <img src="projets/twitter-clone.webp" alt="camerdjoss">
                     </a>
