--- a/index.fr.html
+++ b/index.fr.html
@@ -528,8 +528,8 @@
                     <a href="https://camer-djoss.vercel.app/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
-                    <a href="https://learnskillz.vercel.app/" target="_blank">
-                        <img src="projets/learn-skillz.webp" alt="learnskillz">
+                    <a href="https://ln-app-formation.vercel.app/" target="_blank">
+                        <img src="projets/ln-app-formation.webp" alt="learnskillz">
                     </a>
                     <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
                         <img src="projets/twitter-clone.webp" alt="camerdjoss">
