--- a/index.fr.html
+++ b/index.fr.html
@@ -522,16 +522,22 @@
                     <h2>Ici je vous présente mes projets personnels que j'ai réalisé juste pour le fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
-                    <a href="https://canon-yde-new.vercel.app/" target="_blank">
+                    <a href="https://flutter-cameroon.leonelngoya.com/" target="_blank">
+                        <img src="projets/flutter-cameroon.webp" alt="flutter-cameroon">
+                    </a>
+                    <a href="https://canon-yaounde.leonelngoya.com/" target="_blank">
                         <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
                     </a>
-                    <a href="https://camer-djoss.vercel.app/" target="_blank">
+                    <a href="http://camer-djoss.leonelngoya.com/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
-                    <a href="https://ln-app-formation.vercel.app/" target="_blank">
+                    <a href="http://app-formation.leonelngoya.com/" target="_blank">
                         <img src="projets/ln-app-formation.webp" alt="learnskillz">
                     </a>
-                    <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
+                    <a href="http://esf-website.leonelngoya.com/" target="_blank">
+                        <img src="projets/esf-website.webp" alt="esf-website">
+                    </a>
+                    <a href="http://twitter.leonelngoya.com/" target="_blank">
                         <img src="projets/twitter-clone.webp" alt="camerdjoss">
                     </a>
                     <a href="https://buy-nft.vercel.app/" target="_blank">
