--- a/index.html
+++ b/index.html
@@ -516,16 +516,22 @@
                     <h2>Here I present to you my personal projects that I made just for fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
-                    <a href="https://canon-yde-new.vercel.app/" target="_blank">
+                    <a href="https://flutter-cameroon.leonelngoya.com/" target="_blank">
+                        <img src="projets/flutter-cameroon.webp" alt="flutter-cameroon">
+                    </a>
+                    <a href="https://canon-yaounde.leonelngoya.com/" target="_blank">
                         <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
                     </a>
-                    <a href="https://camer-djoss.vercel.app/" target="_blank">
+                    <a href="http://camer-djoss.leonelngoya.com/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
-                    <a href="https://ln-app-formation.vercel.app/" target="_blank">
+                    <a href="http://app-formation.leonelngoya.com/" target="_blank">
                         <img src="projets/ln-app-formation.webp" alt="learnskillz">
                     </a>
-                    <a href="https://twitter-clone-ten-flame.vercel.app/" target="_blank">
+                    <a href="http://esf-website.leonelngoya.com/" target="_blank">
+                        <img src="projets/esf-website.webp" alt="esf-website">
+                    </a>
+                    <a href="http://twitter.leonelngoya.com/" target="_blank">
                         <img src="projets/twitter-clone.webp" alt="camerdjoss">
                     </a>
                     <a href="https://buy-nft.vercel.app/" target="_blank">
@@ -549,23 +555,23 @@
                     <a href="https://eureka-inte.vercel.app/" target="_blank">
                         <img src="projets/eureka.webp" alt="eureka">
                     </a>
+                    <a href="https://streamix-inte.vercel.app/" target="_blank">
+                        <img src="projets/streamix.webp" alt="streamix-inte">
+                    </a>
                     <a href="https://github.com/ln-dev7/LN-Gram/" target="_blank">
                         <img src="projets/clone-ui-ig.webp" alt="clone-ui-ig">
                     </a>
                     <a href="https://hello-city-ln.herokuapp.com/" target="_blank">
                         <img src="projets/hello-city.webp" alt="hello-city">
                     </a>
-                    <a href="https://streamix-inte.vercel.app/" target="_blank">
-                        <img src="projets/streamix.webp" alt="streamix-inte">
-                    </a>
                     <a href="https://github.com/ln-dev7/ln-react-blog" target="_blank">
                         <img src="projets/ln-react-blog.webp" alt="ln-react-blog">
                     </a>
-                    <a href="https://app-expenses-delta.vercel.app/" target="_blank">
-                        <img src="projets/app-expenses.webp" alt="app-expenses">
-                    </a>
                     <a href="https://fit-class-inte.vercel.app/" target="_blank">
                         <img src="projets/fitclass.webp" alt="fitclass">
+                    </a>
+                    <a href="https://app-expenses-delta.vercel.app/" target="_blank">
+                        <img src="projets/app-expenses.webp" alt="app-expenses">
                     </a>
                     <a href="https://pokedex-six-iota.vercel.app/" target="_blank">
                         <img src="projets/pokedex.webp" alt="pokedex">
