--- a/index.fr.html
+++ b/index.fr.html
@@ -41,6 +41,7 @@
     <script src="scripts/nav.js" defer></script>
     <script src="scripts/experience.js" defer></script>
     <script src="scripts/footer.js" defer></script>
+    <script src="scripts/mouse.js" defer></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-E7N5LJTEWP"></script>
@@ -64,6 +65,8 @@
 </head>
 
 <body class="dark-mode">
+
+    <div id="mouse"></div>
 
     <div id="wrapper" class="wrapper">
 
