ajout de monarc

--- a/index.fr.html
+++ b/index.fr.html
@@ -531,16 +531,19 @@
                     <a href="https://canon-yaounde.leonelngoya.com/" target="_blank">
                         <img src="projets/canon-yde-new.webp" alt="canon-yde-new">
                     </a>
-                    <a href="http://camer-djoss.leonelngoya.com/" target="_blank">
+                    <a href="https://camer-djoss.leonelngoya.com/" target="_blank">
                         <img src="projets/camerdjoss.webp" alt="camerdjoss">
                     </a>
-                    <a href="http://app-formation.leonelngoya.com/" target="_blank">
-                        <img src="projets/ln-app-formation.webp" alt="learnskillz">
-                    </a>
-                    <a href="http://esf-website.leonelngoya.com/" target="_blank">
+                    <a href="https://esf-website.leonelngoya.com/" target="_blank">
                         <img src="projets/esf-website.webp" alt="esf-website">
                     </a>
-                    <a href="http://twitter.leonelngoya.com/" target="_blank">
+                    <a href="https://app-formation.leonelngoya.com/" target="_blank">
+                        <img src="projets/ln-app-formation.webp" alt="learnskillz">
+                    </a>
+                    <a href="https://monarc.leonelngoya.com">
+                        <img src="projets/monarc.webp" alt="monarc">
+                    </a>
+                    <a href="https://twitter.leonelngoya.com/" target="_blank">
                         <img src="projets/twitter-clone.webp" alt="camerdjoss">
                     </a>
                     <a href="https://buy-nft.vercel.app/" target="_blank">
@@ -603,7 +606,7 @@
                     <a href="https://genuka-clone.vercel.app/" target="_blank">
                         <img src="projets/genuka.webp" alt="genuka">
                     </a>
-                    <a href="http://la-battle.vercel.app/" target="_blank">
+                    <a href="https://la-battle.vercel.app/" target="_blank">
                         <img src="projets/labattle.webp" alt="labattle">
                     </a>
                     <a href="https://star-wars-lime.vercel.app/" target="_blank">
