--- a/index.fr.html
+++ b/index.fr.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Salut, moi c'est Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Développeur FrontEnd</h1>
                     <h2>Ici c'est mon site personnel, où vous y trouverez toutes les informations me concernant.</h2>
-                    <a href="https://drive.google.com/file/d/1pPZQgpf0pQUe81K0r8COuoHjQazI9w9v/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1APJJQC1MCc2M2JHL8d8Iqu6bt4vFpf6X/view?usp=sharing"
                         target="_blank" class="header-container-cv">Mon CV</a>
                 </div>
             </div>
@@ -302,13 +302,38 @@
                         <div class="answer">
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
+                                    <a href="https://mboadigital.tech/" target="_blank"><img src="img/mboa.webp"
+                                            alt="Mboa Digital"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>Consultant Digital Junior <span>CDD</span></h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>Septembre 2022 • Présent</b>
+                                    <p>Mboa Digital • Yaounde</p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        Plus qu'un développeur front-end, je suis ici un consultant digital junior. Mon objectif est de concevoir des applications Web robustes avec une bonne UI/UX. Tout en travaillant en équipe.
+                                    </h4>
+                                    <div>
+                                        <button>REACT JS</button>
+                                        <button>GIT</button>
+                                        <button>AGILE</button>
+                                        <button>TRVAIL EN EQUIPE</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
                                     <img src="img/freelance.webp" alt="FREELANCE">
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>Depuis Juin 2021</b>
-                                    <p>Freelance • Douala - Remote</p>
+                                    <p>Freelance • Remote</p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -346,6 +371,7 @@
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
+                                        Durant ce stage mon objectif principal était le développement de sites internet respectant des designs très spécifiques, cela m'a permis d'augmenter mes compétences en ReactJS et aussi de mieux travailler en équipe.
                                     </h4>
                                     <div>
                                         <button>REACT JS</button>
