--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
                     <h1 class="header-container-title">Hi, I'm Leonel NGOYA<img src="img/Hi.gif"></h1>
                     <h1 class="header-container-subtitle">Front End Developer</h1>
                     <h2>This is my personal site, where you will find all the information about me.</h2>
-                    <a href="https://drive.google.com/file/d/1-jIjPIWEkKri0CHrfaaC8UBkH-ZyBRx2/view?usp=sharing"
+                    <a href="https://drive.google.com/file/d/1APJJQC1MCc2M2JHL8d8Iqu6bt4vFpf6X/view?usp=sharing"
                         target="_blank" class="header-container-cv">My CV</a>
                 </div>
             </div>
@@ -299,13 +299,38 @@
                         <div class="answer">
                             <div class="experience-cards-container-card">
                                 <div class="experience-cards-container-card-img">
+                                    <a href="https://mboadigital.tech/" target="_blank"><img src="img/mboa.webp"
+                                            alt="Mboa Digital"></a>
+                                </div>
+                                <div class="experience-cards-container-card-container">
+                                    <h3>Junior Digital Consultant <span>CDD</span></h3>
+                                    <p class="experience-cards-container-card-container-description">
+                                        <b>September 2022 • Present</b>
+                                    <p>Mboa Digital • Yaounde</p>
+                                    </p>
+                                </div>
+                                <div class="experience-cards-container-card-description">
+                                    <h4>
+                                        More than a front-end developer, I am here a junior digital consultant. My goal is to design robust web applications with good UI/UX. While working as a team.
+                                    </h4>
+                                    <div>
+                                        <button>REACT JS</button>
+                                        <button>GIT</button>
+                                        <button>AGILE</button>
+                                        <button>TEAM WORK</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="line"></div>
+                            <div class="experience-cards-container-card">
+                                <div class="experience-cards-container-card-img">
                                     <img src="img/freelance.webp" alt="FREELANCE">
                                 </div>
                                 <div class="experience-cards-container-card-container">
                                     <h3>FrontEnd Developer</h3>
                                     <p class="experience-cards-container-card-container-description">
                                         <b>From June 2021</b>
-                                    <p>Freelance • Douala - Remote</p>
+                                    <p>Freelance • Remote</p>
                                     </p>
                                 </div>
                                 <div class="experience-cards-container-card-description">
@@ -342,6 +367,7 @@
                                 </div>
                                 <div class="experience-cards-container-card-description">
                                     <h4>
+                                        During this internship my main goal was the development of websites respecting very specific designs, it allowed me to increase my skills in ReactJS and also to work better in a team.
                                     </h4>
                                     <div>
                                         <button>REACT JS</button>
