--- a/index.html
+++ b/index.html
@@ -707,9 +707,10 @@
                                 </div>
                                 <div class="card-body__footer">
                                     <button>JavaScript</button>
-                                    <button>Svelte</button>
-                                </div>
-                            </div>
+                                            <button>Svelte</button>
+                                            <button>NextJS</button>
+                                        </div>
+                                    </div>
                         </div>
                         <div class="cert-card">
                             <a href="https://drive.google.com/drive/folders/1U677r2Nnmtq8pm8klai63iOYFMSuWxl6?usp=sharing"
