--- a/index.fr.html
+++ b/index.fr.html
@@ -711,9 +711,10 @@
                                     <h3>Udemy</h3>
                                     <h5>Cliquez sur l' image</h5>
                                 </div>
-                                <div class="card-body__footer">
+                                             <div class="card-body__footer">
                                     <button>JavaScript</button>
-                                    <button>Svelte</button>
+                                     <button>Svelte</button>
+                                    <button>NextJS</button>
                                 </div>
                             </div>
                         </div>
