ajout elizabeth project

--- a/index.html
+++ b/index.html
@@ -545,6 +545,9 @@
                     <h2>Here I present to you my personal projects that I made just for fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
+                    <a href="https://queen-elizabeth-2.vercel.app/" target="_blank">
+                        <img src="projets/queen-elizabeth.webp" alt="queen-elizabeth">
+                    </a>
                     <a href="https://flutter-cameroon.leonelngoya.com/" target="_blank">
                         <img src="projets/flutter-cameroon.webp" alt="flutter-cameroon">
                     </a>
