--- a/index.fr.html
+++ b/index.fr.html
@@ -551,6 +551,9 @@
                     <h2>Ici je vous présente mes projets personnels que j'ai réalisé juste pour le fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
+                    <a href="https://queen-elizabeth-2.vercel.app/" target="_blank">
+                        <img src="projets/queen-elizabeth.webp" alt="queen-elizabeth">
+                    </a>
                     <a href="https://flutter-cameroon.leonelngoya.com/" target="_blank">
                         <img src="projets/flutter-cameroon.webp" alt="flutter-cameroon">
                     </a>
