--- a/index.html
+++ b/index.html
@@ -545,7 +545,7 @@
                     <h2>Here I present to you my personal projects that I made just for fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
-                    <a href="https://queen-elizabeth-2.vercel.app/" target="_blank">
+                    <a href="https://queenelizabeth2.leonelngoya.com/" target="_blank">
                         <img src="projets/queen-elizabeth.webp" alt="queen-elizabeth">
                     </a>
                     <a href="https://flutter-cameroon.leonelngoya.com/" target="_blank">
