--- a/index.fr.html
+++ b/index.fr.html
@@ -551,7 +551,7 @@
                     <h2>Ici je vous présente mes projets personnels que j'ai réalisé juste pour le fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
-                    <a href="https://queen-elizabeth-2.vercel.app/" target="_blank">
+                    <a href="https://queenelizabeth2.leonelngoya.com/" target="_blank">
                         <img src="projets/queen-elizabeth.webp" alt="queen-elizabeth">
                     </a>
                     <a href="https://flutter-cameroon.leonelngoya.com/" target="_blank">
