--- a/index.fr.html
+++ b/index.fr.html
@@ -247,7 +247,16 @@
                 </div>
             </div>
         </div>
-
+        
+        <div class="brand-text">
+            <p>
+                Venez
+        <a href="https://www.behance.net/gallery/152461279/Ngoya-Leonel-Brand-Identity">
+             Ouvrir vos voies à un monde infini de possibilités ♾
+        </a>
+            </p>
+        </div>
+ 
         <div class="services" id="services">
             <div class="services-cards">
                 <div class="services-cards-title">
