--- a/index.html
+++ b/index.html
@@ -247,6 +247,15 @@
             </div>
         </div>
 
+        <div class="brand-text">
+            <p>
+                Come
+        <a href="https://www.behance.net/gallery/152461279/Ngoya-Leonel-Brand-Identity">
+            Open your ways to an infinite world of possibilities ♾
+        </a>
+            </p>
+        </div>
+
         <div class="services" id="services">
             <div class="services-cards">
                 <div class="services-cards-title">
