ajout web app photo

--- a/index.fr.html
+++ b/index.fr.html
@@ -560,6 +560,9 @@
                     <h2>Ici je vous présente mes projets personnels que j'ai réalisé juste pour le fun 😁✨</h2>
                 </div>
                 <div class="experience-cards-project">
+                    <a href="https://webappphotography.leonelngoya.com/" target="_blank">
+                        <img src="projets/web-app-photo.webp" alt="webappphotography">
+                    </a>
                     <a href="https://queenelizabeth2.leonelngoya.com/" target="_blank">
                         <img src="projets/queen-elizabeth.webp" alt="queen-elizabeth">
                     </a>
